# pneumonia-x-ray-classification

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: evaluate_model.ipynb  initial_eda.ipynb  preprocess_train.ipynb
src/pneumonia_detector/: evaluate.py  model.py  preprocess.py  train.py  training_run.py
