[metadata]
name = pneumonia_detector
author = David Pickup
description = Detect Pneumonia from Chest X-rays
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >= 3.9
install_requires =
    torch==2.0.1
    torchvision==0.15.2

[options.packages.find]
where = src

[flake8]
max-line-length = 120
exclude =
    .git
    __pycache__
    build
    dist
    doc
    .devcontainer
statistics = 1
doctests = 1
extend-ignore = E203

[aliases]
lint = flake8
